// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test Apollo Service Test schema merging should merge schemas 1`] = `
{
  "schema": "scalar Timestamp

type Query {
  tags: [String!]
  posts: [Post!]!
  users: [User!]!
}

type Mutation {
  addTag(tag: String!): Boolean!
  vote(postID: Int!): Post!
}

"""This type describes a post entity."""
type Post {
  id: Int!
  title: String!
  author: User!
  votes: Int!
  createdAt: Timestamp
}

type User {
  id: Int!
  name: String!
  posts: [Post]
  postCount: Int
  type: UserType
}

"""Enumerations for user types"""
enum UserType {
  ADMIN
  PUBLISHER
  READER
}",
}
`;

exports[`Test Apollo Service Test schema preparation should generate valid GraphQL schema 1`] = `
{
  "schema": "type Query {
  posts: [Post!]!
  users: [User!]!
}

"""This type describes a post entity."""
type Post {
  id: Int!
  title: String!
  votes: Int!
}

type User {
  id: Int!
  name: String!
}",
}
`;
